[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["pytrade2"]

[project]
name = "pytrade2"
version = "0.1"
dependencies = [
    #"binance-connector~=2.0.0",
    #"binance-futures-connector~=3.3.1",
    "pandas~=2.1.4",
    "pyyaml~=6.0.1",
    "requests~=2.31.0",
    "urllib3~=2.0.7",
    #"tensorflow~=2.16.1",
    "keras~=3.2.0",
    "numpy~=1.26.2",
    "scikeras~=0.13.0",
    "scikit-learn~=1.5.1",
    "sqlalchemy~=2.0.23",
    "huobi-sdk~=2.3.3",
    "boto3==1.28.60",
    "botocore>=1.28.60",
    "ta~=0.11.0",
    "lightgbm~=4.3.0",
    "prometheus-client~=0.19.0",
    "flask~=2.3.3",
    "mlflow~=2.12.1"]
requires-python = ">=3.11"