[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytrade2"
version = "0.1"
dependencies = [
    #"binance-connector~=2.0.0",
    #"binance-futures-connector~=3.3.1",
    "pandas",
    "pyyaml",
    "requests",
    "urllib3",
    "confluent-kafka",
    #"tensorflow~=2.16.1",
    "keras",
    "numpy",
    "scikeras",
    "scikit-learn",
    "sqlalchemy",
    "huobi-sdk",
    "s3fs",
    "boto3",
    "botocore~=1.37",
    "ta",
    "lightgbm",
    "prometheus-client",
    "flask",
    "mlflow"]
requires-python = ">=3.12"